User Registration Done using Authentication

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=SAKSHAT;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=SAKSHAT;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=SAKSHAT;Database=NZWalksAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9",
+    "Issuer": "https://localhost:7115/",
+    "Audience": "https://localhost:7115/"
   }
 }
